--- a/src/WiX_packaged_msi/Product.wxs
+++ b/src/WiX_packaged_msi/Product.wxs
@@ -8,11 +8,13 @@
 		<Icon Id="AppIcon" SourceFile="..\UMManager.WinUI\Assets\WindowIcon.ico" />
 		<Property Id="ARPPRODUCTICON" Value="AppIcon" />
 
-		<ui:WixUI Id="WixUI_InstallDir" InstallDirectory="INSTALLFOLDER" />
+		<ui:WixUI Id="WixUI_InstallDir" InstallDirectory="INSTALLPARENT" />
 		<UIRef Id="WixUI_ErrorProgressText" />
 
 		<StandardDirectory Id="ProgramFiles64Folder">
-			<Directory Id="INSTALLFOLDER" Name="UMManager" />
+			<Directory Id="INSTALLPARENT" Name=".">
+				<Directory Id="INSTALLFOLDER" Name="UMManager" />
+			</Directory>
 		</StandardDirectory>
 
 		<StandardDirectory Id="ProgramMenuFolder">
@@ -22,6 +24,8 @@
 		<Feature Id="ProductFeature" Title="UMManager" Level="1">
 			<ComponentGroupRef Id="AppFiles" />
 			<ComponentRef Id="ApplicationShortcut" />
+			<ComponentRef Id="UninstallShortcut" />
+			<ComponentRef Id="UninstallShortcutInInstallFolder" />
 			<ComponentRef Id="DesktopShortcut" />
 		</Feature>
 	</Package>
@@ -37,6 +41,26 @@
 						  WorkingDirectory="INSTALLFOLDER" />
 				<RemoveFolder Id="RemoveApplicationProgramsFolder" On="uninstall" />
 				<RegistryValue Root="HKCU" Key="Software\UMManager" Name="installed" Type="integer" Value="1" KeyPath="yes" />
+			</Component>
+			<Component Id="UninstallShortcut" Guid="*">
+				<Shortcut Id="ApplicationUninstallShortcut"
+						  Name="卸载 UMManager"
+						  Description="卸载 UMManager"
+						  Icon="AppIcon"
+						  Target="[SystemFolder]msiexec.exe"
+						  Arguments="/x [ProductCode]" />
+				<RegistryValue Root="HKCU" Key="Software\UMManager" Name="uninstallShortcut" Type="integer" Value="1" KeyPath="yes" />
+			</Component>
+		</DirectoryRef>
+		<DirectoryRef Id="INSTALLFOLDER">
+			<Component Id="UninstallShortcutInInstallFolder" Guid="*">
+				<Shortcut Id="InstallFolderUninstallShortcut"
+						  Name="卸载 UMManager"
+						  Description="卸载 UMManager"
+						  Icon="AppIcon"
+						  Target="[SystemFolder]msiexec.exe"
+						  Arguments="/x [ProductCode]" />
+				<RegistryValue Root="HKLM" Key="Software\UMManager" Name="uninstallShortcutInFolder" Type="integer" Value="1" KeyPath="yes" />
 			</Component>
 		</DirectoryRef>
 		<StandardDirectory Id="DesktopFolder">
